img top add, and settings header

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <body>
     <header>
+        <nav>
+            <a href="#">Cursos</a>
+            <a href="#">Serviços</a>
+            <a href="#">Professor</a>
+        </nav>
+        <img class="imagens-sites" src="img/logo-tec-site.png" alt="imagem logo tec">
     </header>
     <br>
     <section class ="conteudo-topo">
