--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#">Serviços</a>
             <a href="#">Professor</a>
         </nav>
-        <img class="imagens-sites" src="img/logo-tec-site.png" alt="imagem logo tec">
+        <img class="imagens-sites" id="logo-topo" src="img/logo-tec-site.png" alt="imagem logo tec">
     </header>
     <br>
     <section class ="conteudo-topo">
