--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img class="imagens-sites" id="logo-topo" src="img/logo-tec-site.png" alt="imagem logo tec">
         </header>
         <br>
-        <section class ="conteudo-topo">
+        <section class ="container">
             <h1>Visualize agora mesmo o E-book:<br> Desevolvimento Front-End para Iniciantes</h1>
             <br>
             <figure>
