add link whatsApp

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
             </nav>
             <img class="imagens-sites" id="logo-topo" src="img/logo-tec-site.png" alt="imagem logo tec">
         </header>
+        <!-- Contato via wwhatssap-->
+         <div id="whats">
+
+            <h4>Dúvidas?</h4>
+            <a href="https://api.whatsapp.com/send?phone=5566980299462&text=Ol%C3%A1
+             ,%20gostariad%20e%20mais%20informcoes" target="_blank"
+            ><img src="img/whats.png" alt="Whatssap"></a>
+         </div>
+
         <br>
         <section class ="container">
             <h1>Visualize agora mesmo o E-book:<br> Desevolvimento Front-End para Iniciantes</h1>
