--- a/index.html
+++ b/index.html
@@ -30,12 +30,17 @@
         <section class ="container">
             <h1>Visualize agora mesmo o E-book:<br> Desevolvimento Front-End para Iniciantes</h1>
             <br>
-            <figure>
-            <img class = "imagens-sites" src = "img/capa-ebook.png" alt="imagem-capa">
-            </figure>
+            <!-- aqui vem o livrod e apresentacao-->
+             <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/PwBT2-m4owg?si=tigcwwnfgQYemleY" title="YouTube video player" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+             </div>
             <br>
             <button><a href="img/ebook.pdf" target="_blank">Visualizar PDF </a></button>   
             <br>
+
             <!-- AQUI VAMOS INSERIR UMA TABELA DE PRODUTOS-->
             <br>
             <section class="conteudo">
