--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
         <br>
         <section class ="container">
-            <h1>Visualize agora mesmo o E-book:<br> Desevolvimento Front-End para Iniciantes</h1>
+            <h1>APRENDA DESEVOLVIMENTO DE SITES E APLICAÇOES WEB</h1>
             <br>
             <!-- aqui vem o livrod e apresentacao-->
              <div class="video">
-                
+
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/PwBT2-m4owg?si=tigcwwnfgQYemleY" title="YouTube video player" frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -85,11 +85,14 @@
         </section>
         <br>
         <footer>
-            <H3>TECTREINAMENTOS INFORMÁTICA</H3>
+            <H3>TECTREINAMENTOS INFORMÁTICA LTDA</H3>
+            <p>CPJ: 40.800.000/0003-75</p>
             <H4>Desevolvimento web</H4>
+            <br>
             <P>CONTATO: thiago@gmail.com</P>
             <p>Whatssap: (11) 9000-0000</p>
-            <p>Direitos Reservados</p>
+            <br>
+            <h6>Desevolvido  po THIAGO FERNANDES</h6>
         </footer>
     </body>
     </html>
