img whats center responsive

--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
         </header>
         <!-- Contato via wwhatssap-->
          <div id="whats">
-
-            <h4>Dúvidas?</h4>
             <a href="https://api.whatsapp.com/send?phone=5566980299462&text=Ol%C3%A1
              ,%20gostariad%20e%20mais%20informcoes" target="_blank"
-            ><img src="img/whats.png" alt="Whatssap"></a>
+            ><img class ="img-whats" src="img/whats.png" alt="Whatssap"></a>
          </div>
 
         <br>
