topo corpo complementar

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
             </nav>
             <img class="imagens-sites" id="logo-topo" src="img/logo-tec-site.png" alt="imagem logo tec">
         </header>
+    </section>
+    <br>
+    <section class="conteudo-corpo" id ="grid-conteudo-corpo">
+        <div class ="grid-corpo">
+            <div id="corpo">conteudo 1</div>
+            <div>conteudo 2</div>
+        </div>
+    </section>
+    <br>
+        
         <!-- Contato via wwhatssap-->
          <div id="whats">
             <a href="https://api.whatsapp.com/send?phone=5566980299462&text=Ol%C3%A1
