text title grids top

--- a/index.html
+++ b/index.html
@@ -21,9 +21,23 @@
     <br>
     <section class="conteudo-corpo" id ="grid-conteudo-corpo">
         <div class ="grid-corpo">
-            <div id="corpo">conteudo 1</div>
-            <div>conteudo 2</div>
-        </div>
+            <div id="corpo">
+                <br>
+                <img src="img/boneco.png" alt="imagem-topo TECTREINAMENTOS">
+            </div>
+
+            <div>
+                <br><br>
+                <h2>TRANSFORME SUA CARREIRA. <br> APRENDA COM ESPECIALISTA <br>TORNE-SE DESEVOLVEDOR(A) WEB. </h2>
+                <p><strong></strong>Se você é estudante ou iniciannnte nas áreas de desenvolvimento webs afins está no lugar certo.</strong></p>
+                <br>
+                <p>Aqui você terá acesso a um conteúdo connceituado e com as melhores classificaçôes da internet</p>
+                <br>
+                <p><strong>Aprenda com ESPECIALISTA como desenvoklvder sites e aplicaçoes web e transforme os seus estudos em carreira,
+                 conheça nossos treinametos pensados para  iniciantes e estudantes e desenvolva projetos reais.</strong></p>
+                <br>
+            </div>
+        </div>  
     </section>
     <br>
         
