Responsive text grid

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class ="grid-corpo">
             <div id="corpo">
                 <br>
-                <img src="img/boneco.png" alt="imagem-topo TECTREINAMENTOS">
+                <img class ="imagens-corpo" src="img/boneco.png" alt="imagem-topo TECTREINAMENTOS">
             </div>
 
             <div>
