reduce container space

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
 
             <div>
                 <br><br>
-                <h2>TRANSFORME SUA CARREIRA. <br> APRENDA COM ESPECIALISTA <br>TORNE-SE DESEVOLVEDOR(A) WEB. </h2>
+                <h2 id="title-topo">TRANSFORME SUA CARREIRA. <br> APRENDA COM ESPECIALISTA <br>TORNE-SE DESEVOLVEDOR(A) WEB. </h2>
+                <br><br>
                 <p><strong></strong>Se você é estudante ou iniciannnte nas áreas de desenvolvimento webs afins está no lugar certo.</strong></p>
-                <br>
+                <br><br>
                 <p>Aqui você terá acesso a um conteúdo connceituado e com as melhores classificaçôes da internet</p>
                 <br>
                 <p><strong>Aprenda com ESPECIALISTA como desenvoklvder sites e aplicaçoes web e transforme os seus estudos em carreira,
