creating list of how to become a dev

--- a/index.html
+++ b/index.html
@@ -60,20 +60,33 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-             </div>
-            <br>
-            <button><a href="img/ebook.pdf" target="_blank">Visualizar PDF </a></button>   
+            </div>
+            
+
             <br>
 
             <!-- AQUI VAMOS INSERIR UMA TABELA DE PRODUTOS-->
             <br>
             <section class="conteudo">
-                <h2>Este é o quarta titulo</h2>
-                <p>
-                    Como é uma ênfase, o foco e o núcleo de trabalho está voltado para o processo de desenvolvimento de software, levando em conta a área tecnológica em que irá auxiliar. 
-                    O analista de sistemas deve servir como um tradutor entre as necessidades do usuário e o programa a ser desenvolvido pelo programador. Para isto, deve ter conhecimento abrangente da área de negócio na qual o sistema será desenvolvido,
-                    a fim de que possa implementar corretamente as regras de negócio.
-                </p>
+                <h2>QUER SER TORAR UM(A) DESESEVOLVEDOR(A) DE SUCESSO? VAMOS AO PASSO A PASSO</h2>
+                <br>
+                <p>Vamos listar aqui tudo o que você precisa pra ter sucesso a área de desenvolvimento web</p>
+                <br>
+                <ul>
+                    <li>Aprenda HTML e CSS</li>
+                    <li>Crie projetos Front End para iniciar o seu portfólio</li>
+                    <li>Caso ainda não tenha clientes crie sites sobre atualidades ou mesmo conteúdos de seu interesse como livros, jogos e esportes por exemplo</li>
+                    <li>Divulgue seu trabalho para pessoas conhecidas e até mesmo em redes sociais e peça opniões</li>
+                    <li>Foque nas opiniões negativas para melhorar e nas positivas para criar ainda mais conteúdo em seus pontos fortes</li>
+                    <li>Foque em aprender lógica de programação</li>
+                    <li>Foque em aprender uma linguagem de programação como JavaScript ou PHP (faça aulas das duas para saber com a qual você se adapta melhor)</li>
+                    <li>Aprenda o básico da linguagem</li>
+                    <li>Aprenda como desenvolver bancos de dados</li>
+                    <li>Aprenda como conectar dados do site ao banco de dados</li>
+                    <li>Aprenda como utilizar os principais Frameworks de cada linguagem</li>
+                    <li>Crie projetos Back End (programação Web) complementando os projetos do Front End</li>
+                    <li>Estude aspectos avançados de HTML, CSS e programação Web para tornar-se desenvolvedor(a) FullStack</li>
+                </ul>
             </section>
                 <br>
                 <section class="conteudo" id ="grid-conteudo">
