inserting content at the top

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </nav>
             <img class="imagens-sites" id="logo-topo" src="img/logo-tec-site.png" alt="imagem logo tec">
         </header>
-    </section>
-    <br>
+
+   
     <section class="conteudo-corpo" id ="grid-conteudo-corpo">
         <div class ="grid-corpo">
             <div id="corpo">
@@ -28,7 +28,7 @@
 
             <div>
                 <br><br>
-                <h2 id="title-topo">TRANSFORME SUA CARREIRA. <br> APRENDA COM ESPECIALISTA <br>TORNE-SE DESEVOLVEDOR(A) WEB. </h2>
+                <h2 id="titulo-topo">TRANSFORME SUA CARREIRA. <br> APRENDA COM ESPECIALISTA <br>TORNE-SE DESEVOLVEDOR(A) WEB. </h2>
                 <br><br>
                 <p><strong></strong>Se você é estudante ou iniciannnte nas áreas de desenvolvimento webs afins está no lugar certo.</strong></p>
                 <br><br>
@@ -87,7 +87,42 @@
                     <li>Crie projetos Back End (programação Web) complementando os projetos do Front End</li>
                     <li>Estude aspectos avançados de HTML, CSS e programação Web para tornar-se desenvolvedor(a) FullStack</li>
                 </ul>
+                <br><br>
+            <p>
+            Esforço e desenvolvimento de projetos vão ajudar em seus  estudose trazer a experiência inicial necessária
+            para ingressar a carreira e conquistar seus primeiros clientes ou mesmo para a conquista do primeiro emprego 
+            como desenvolvedor(a) web.
+                </p>
+                <br>
+            <p><strong>
+            lembre-se de seguir os passos, não pule etapas para que possa gradualmente entender tudo o que é necessário
+            para ser um(a) profissional de sucesso. 
+            </strong></p>
+
+                
             </section>
+            <br>
+            <section class="conteudo-corpo" id ="grid-conteudo-corpo">
+                <div class ="grid-corpo">
+                    <div id="corpo">
+                        <br>
+                        <img class ="imagens-corpo" src="img/html.gif" alt="HTML annnimado">
+                    </div>
+        
+                    <div>
+                        <br><br>
+                        <h2>HTML5 e CSS3</h2>
+                        <br>
+                        <p>Lorem Ipsum é simplesmente um texto modelo da indústria tipográfica e de impressão. Lorem Ipsum tem sido o texto modelo
+                           padrão da indústria desde os anos 1500, quando um impressor desconhecido pegou uma galera de tipos e os embaralhou para fazer um livro de espécimes de tipos.
+                            Ele sobreviveu não apenas cinco séculos, mas também ao salto para a composição eletrônica, permanecendo essencialmente inalterado. Foi popularizado na década de 1960 com o lançamento das folhas Letraset contendo passagens do Lorem Ipsum e, 
+                            mais recentemente, com softwares de editoração eletrônica como o Aldus PageMaker, incluindo versões do Lorem Ipsum.</p>
+                        <br>
+                    </div>
+                </div>  
+            </section>
+
+            <br>
                 <br>
                 <section class="conteudo" id ="grid-conteudo">
                     <div class ="grid">
