--- a/index.html
+++ b/index.html
@@ -98,11 +98,12 @@
             lembre-se de seguir os passos, não pule etapas para que possa gradualmente entender tudo o que é necessário
             para ser um(a) profissional de sucesso. 
             </strong></p>
-
-                
+   
             </section>
+            <br><br>
+            <h2>VAMOS CONHECER ALGUMAS DAS PRINCIPAIS TECNOLOGIAS DISPOÌVEIS PARA DESEVOLVIMENTO WEB</h2>
             <br>
-            <section class="conteudo-corpo" id ="grid-conteudo-corpo">
+            <section class="conteudo" id ="grid-conteudo">
                 <div class ="grid-corpo">
                     <div id="corpo">
                         <br>
@@ -111,12 +112,14 @@
         
                     <div>
                         <br><br>
-                        <h2>HTML5 e CSS3</h2>
-                        <br>
-                        <p>Lorem Ipsum é simplesmente um texto modelo da indústria tipográfica e de impressão. Lorem Ipsum tem sido o texto modelo
-                           padrão da indústria desde os anos 1500, quando um impressor desconhecido pegou uma galera de tipos e os embaralhou para fazer um livro de espécimes de tipos.
-                            Ele sobreviveu não apenas cinco séculos, mas também ao salto para a composição eletrônica, permanecendo essencialmente inalterado. Foi popularizado na década de 1960 com o lançamento das folhas Letraset contendo passagens do Lorem Ipsum e, 
-                            mais recentemente, com softwares de editoração eletrônica como o Aldus PageMaker, incluindo versões do Lorem Ipsum.</p>
+                        <span class="tecnologias">
+                            <h2 class="titulo-corpo">HTML5 e CSS3</h2>
+                            <br>
+                            <p>Lorem Ipsum é simplesmente um texto modelo da indústria tipográfica e de impressão. Lorem Ipsum tem sido o texto modelo
+                               padrão da indústria desde os anos 1500, quando um impressor desconhecido pegou uma galera de tipos e os embaralhou para fazer um livro de espécimes de tipos.
+                                Ele sobreviveu não apenas cinco séculos, mas também ao salto para a composição eletrônica, permanecendo essencialmente inalterado. Foi popularizado na década de 1960 com o lançamento das folhas Letraset contendo passagens do Lorem Ipsum e, 
+                                mais recentemente, com softwares de editoração eletrônica como o Aldus PageMaker, incluindo versões do Lorem Ipsum.</p>
+                        </span>
                         <br>
                     </div>
                 </div>  
