full stack conteudo

--- a/index.html
+++ b/index.html
@@ -124,6 +124,50 @@
                     </div>
                 </div>  
             </section>
+            <br>
+            <section class="conteudo" id ="grid-conteudo">
+                <div class ="grid-corpo">
+                    <div id="corpo">
+                        <br>
+                        <img class ="imagens-corpo" src="img/logica.gif" alt="Logica de programacao">
+                    </div>
+        
+                    <div>
+                        <br><br>
+                        <span class="tecnologias">
+                            <h2 class="titulo-corpo">LÒGICA DE PROGRAMAÇÂO</h2>
+                            <br>
+                            <p>Lorem Ipsum é simplesmente um texto modelo da indústria tipográfica e de impressão. Lorem Ipsum tem sido o texto modelo
+                               padrão da indústria desde os anos 1500, quando um impressor desconhecido pegou uma galera de tipos e os embaralhou para fazer um livro de espécimes de tipos.
+                                Ele sobreviveu não apenas cinco séculos, mas também ao salto para a composição eletrônica, permanecendo essencialmente inalterado. Foi popularizado na década de 1960 com o lançamento das folhas Letraset contendo passagens do Lorem Ipsum e, 
+                                mais recentemente, com softwares de editoração eletrônica como o Aldus PageMaker, incluindo versões do Lorem Ipsum.</p>
+                        </span>
+                        <br>
+                    </div>
+                </div>  
+            </section>
+            <br>
+            <section class="conteudo" id ="grid-conteudo">
+                <div class ="grid-corpo">
+                    <div id="corpo">
+                        <br>
+                        <img class ="imagens-corpo" src="img/fullstack.gif" alt="Programacao web full stack">
+                    </div>
+        
+                    <div>
+                        <br><br>
+                        <span class="tecnologias">
+                            <h2 class="titulo-corpo">PROGRAMAÇÂO WEB - FULL STACK </h2>
+                            <br>
+                            <p>Lorem Ipsum é simplesmente um texto modelo da indústria tipográfica e de impressão. Lorem Ipsum tem sido o texto modelo
+                               padrão da indústria desde os anos 1500, quando um impressor desconhecido pegou uma galera de tipos e os embaralhou para fazer um livro de espécimes de tipos.
+                                Ele sobreviveu não apenas cinco séculos, mas também ao salto para a composição eletrônica, permanecendo essencialmente inalterado. Foi popularizado na década de 1960 com o lançamento das folhas Letraset contendo passagens do Lorem Ipsum e, 
+                                mais recentemente, com softwares de editoração eletrônica como o Aldus PageMaker, incluindo versões do Lorem Ipsum.</p>
+                        </span>
+                        <br>
+                    </div>
+                </div>  
+            </section>
 
             <br>
                 <br>
