--- a/index.html
+++ b/index.html
@@ -168,17 +168,58 @@
                     </div>
                 </div>  
             </section>
+            <br>
+            <h2>NOSSOS CURSOS</h2>
+            <br>
+
+            <p>Conheça nossos cursos de desevolvimento web.
+            Todos são pensados para levar o aluno ao desenvolvimento de sites e aplicaçôes web, mesmo sem experiência anterior
+            Nosso foco são os iniciantes e também estudantes interessados em ingressar na carreira ou mesmo em uma nova área. <br>
+            são cursos com altas avaliaçôes, garantia incondicional de 30 dias, suporte e certificado de conclusão. <br>
+        </p>
+
 
             <br>
                 <br>
                 <section class="conteudo" id ="grid-conteudo">
                     <div class ="grid">
-                        <div>conteudo 1</div>
-                        <div>conteudo 2</div>
-                        <div>conteudo 3</div>
-                        <div>conteudo 4</div>
-                        <div>conteudo 5</div>
-                        <div>conteudo 6</div>
+                        <div>
+                            <figure>
+                                <img class="imagens-sites" src="img/html.png" alt="HTML e CSS TECTREINAMENTOS">
+                                <figcaption>Curso de HTML e CSS</figcaption>
+                            </figure>
+                        </div>
+                        <div>
+                            <figure>
+                                <img  class="imagens-sites" src="img/javascript.png" alt="JavaScript TECTREINAMENTOS">
+                                <figcaption>Curso de JavaScript</figcaption>
+                            </figure>
+                        </div>
+                        <div>
+                            <figure>
+                                <img class="imagens-sites" src="img/php.png" alt="PHP TECTREINAMENTOS">
+                                <figcaption>Curso de PHP</figcaption>
+                            </figure>
+
+                        </div>
+                        <div>
+                            <figure>
+                                <img  class="imagens-sites" src="img/bootstrap.png" alt="bootstrap TECTREINAMENTOS">
+                                <figcaption>Curso de Bootstrap</figcaption>
+                            </figure>
+                        </div>
+                        <div>
+                            <figure>
+                                <img  class="imagens-sites" src="img/htmlyt.png" alt="HTML Youtube">
+                                <figcaption>Curso GRATUITO de HTMLe CSS</figcaption>
+                            </figure>
+                        </div>
+                        <div>
+                            <figure>
+                                <img  class="imagens-sites" src="img/javascriptyt.png" alt="Javascriptyt YouTube">
+                                <figcaption>Curso GRATUITO de Javascriptyt</figcaption>
+                            </figure>
+                        </div>
             
                     </div>
                 </section>
